--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-between ">
                 <a class="navbar-brand" href="#">
-                    <h4 style="font-weight: 600;">Chittagong Convention Center</h4>
+                    <h4 style="font-weight: 600;">CCC</h4>
                 </a>
                 <div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -67,41 +67,45 @@
                 <div class="carousel-item active">
                     <img src="images/banner.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block mb-5">
-                        <h1>The perfect venue for your
-                            next event</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit </p>
-                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
+                        <h1>Meet the Best Convention Center in Bangladesh</h1>
+                        <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
+                            secure
+                            and confident booking your next meeting in Chittagong.</p>
+                        <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
+                                href="google.com">Book Now</a></button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="images/banner-2.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block mb-5">
-                        <h1>The perfect venue for your
-                            next event</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit </p>
-                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
+                        <h1>Meet the Best Convention Center in Bangladesh</h1>
+                        <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
+                            secure
+                            and confident booking your next meeting in Chittagong</p>
+                        <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
+                                href="google.com">Book Now</a< /button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="images/banner-3.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block mb-5">
-                        <h1>The perfect venue for your
-                            next event</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit </p>
-                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
+                        <h1>Meet the Best Convention Center in Bangladesh</h1>
+                        <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
+                            secure
+                            and confident booking your next meeting in Chittagong</p>
+                        <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
+                                href="google.com">Book Now</a< /button>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="images/banner-4.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block mb-5">
-                        <h1>The perfect venue for your
-                            next event</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-                            consequat duis enim velit </p>
-                        <button class="btn btn-light text-primary fw-bold">Book Now</button>
+                        <h1>Meet the Best Convention Center in Bangladesh</h1>
+                        <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
+                            secure
+                            and confident booking your next meeting in Chittagong</p>
+                        <button class="btn btn-light text-primary fw-bold"><a style="text-decoration: none;"
+                                href="google.com">Book Now</a< /button>
                     </div>
                 </div>
             </div>
@@ -138,7 +142,7 @@
                                 <li>Per day bill</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -158,7 +162,7 @@
                                 <li>Billed as shift</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +185,7 @@
                                 <li>Pay as plan</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -201,7 +205,7 @@
                                 <li>Pay as plan</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Order Now</button>
+                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
