--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
     <!-- External Css  -->
     <link rel="stylesheet" href="style.css">
     <!-- BOOTSTRAP CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- BOOTSTRAP JS  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP 4.6 JS  -->
 
 
 
@@ -39,10 +52,10 @@
                                 <a class="nav-link" href="#pricing">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="#qna">QNA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#subscribe"><span class="d-flex">Subscribe <span
+                                <a class="nav-link" href="#subscribe"><span class="d-flex">Availability <span
                                             style="margin-left: 5px;" class="badge bg-badge">New</span></span> </a>
                             </li>
 
@@ -65,8 +78,8 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/banner.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block mb-5">
+                    <img src="images/banner.png" class="d-block " alt="...">
+                    <div class="carousel-caption  mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
                             secure and confident booking your next meeting in Chittagong.</p>
@@ -75,8 +88,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/banner-2.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block mb-5">
+                    <img src="images/banner-2.png" class="d-block " alt="...">
+                    <div class="carousel-caption mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
                             secure and confident booking your next meeting in Chittagong.</p>
@@ -85,8 +98,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/banner-3.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block mb-5">
+                    <img src="images/banner-3.png" class="d-block " alt="...">
+                    <div class="carousel-caption mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
                             secure and confident booking your next meeting in Chittagong.</p>
@@ -95,8 +108,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/banner-4.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block mb-5">
+                    <img src="images/banner-4.png" class="d-block " alt="...">
+                    <div class="carousel-caption mb-5">
                         <h1>Meet the Best Convention Center in Bangladesh</h1>
                         <p>Chittagong is ready to welcome you when you are ready to meet. Allow us to help you feel
                             secure and confident booking your next meeting in Chittagong.</p>
@@ -120,7 +133,7 @@
     <main>
         <!-- Pricing Section  -->
         <section id="pricing" class="container my-5">
-            <h1 class="text-center my-5">Our package</h1>
+            <h1 class="text-center my-md-0 my-lg-5">Our Packages</h1>
             <div class="row">
                 <div class="col-sm-12 col-lg-3 col-md-6 my-5">
                     <div class="card border-0">
@@ -208,7 +221,7 @@
             </div>
         </section>
         <!-- Frequently Asked Questions Section  -->
-        <section class="container my-5">
+        <section id="qna" class="container my-5">
             <h1 class="text-center my-5">QNA from Clients</h1>
             <div class="row gy-5">
                 <div class="col-lg-6 ">
@@ -294,12 +307,15 @@
                 </div>
             </div>
         </section>
+
+        <hr class="container">
+
         <!-- Book Now Section  -->
         <section id="subscribe" class="container">
 
 
 
-            <div class="row my-5 gx-5">
+            <div class="row my-5">
                 <div class="col-lg-8 col-sm-12">
                     <h1 class="my-4">Check Availability</h1>
                     <p class="">CCC is the only multi-purpose convention facility
@@ -325,14 +341,22 @@
                         <option value="4">Fourth Week</option>
                     </select>
                     <div class="text-center">
-                        <button class="btn-fav bg-featured
-                    ">Check Availability</button>
+                        <button class="btn-fav bg-featured">Check Availability</button>
                     </div>
                 </div>
             </div>
         </section>
 
-
+        <div class="toast align-items-center text-white bg-primary border-0" role="alert" aria-live="assertive"
+            aria-atomic="true" data-autohide="false">
+            <div class="d-flex">
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                    aria-label="Close"></button>
+            </div>
+        </div>
 
 
     </main>
@@ -356,16 +380,7 @@
     </footer>
 
 
-    <!-- BOOTSTRAP JS  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+
 
 
 
