--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>Chittagong Convention Center</title>
     <!-- External Css  -->
     <link rel="stylesheet" href="style.css">
-    <!-- BOOTSTRAP CSS  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- BOOTSTRAP CSS -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <!-- BOOTSTRAP CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 
 
@@ -141,7 +144,7 @@
                                 <li>Per day bill</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
+                            <button class="Order-btn col-12 mx-auto fw-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -161,7 +164,7 @@
                                 <li>Billed as shift</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
+                            <button class="Order-btn col-12 mx-auto fw-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -184,7 +187,7 @@
                                 <li>Pay as plan</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
+                            <button class="Order-btn col-12 mx-auto fw-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -204,7 +207,7 @@
                                 <li>Pay as plan</li>
                                 <li>Highly Accessible</li>
                             </ul>
-                            <button class="Order-btn col-12 mx-auto font-weight-bold">Choose Plan</button>
+                            <button class="Order-btn col-12 mx-auto fw-bold">Choose Plan</button>
                         </div>
                     </div>
                 </div>
@@ -215,7 +218,7 @@
             <h1 class="text-center my-5">QNA from Clients</h1>
             <div class="row gy-5">
                 <div class="col-lg-6 ">
-                    <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <!-- <div class="accordion" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -290,6 +293,78 @@
                                 </div>
                             </div>
                         </div>
+                    </div> -->
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    How is Spacious?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    One of the most important features that a convention center should have is
+                                    spaciousness. This allows the staging of different kinds of events allowing to
+                                    maximize the space and layout; where exhibitors can set up trade booths to display
+                                    their products, services, and other offerings.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Highly Accessible?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    A convention center should also be highly accessible. Event participants, guests,
+                                    and keynote speakers must be able to reach the venue easily either by public or
+                                    private transportation.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What about Reputable?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Another must-have feature of a convention center is its sound reputation. Though one
+                                    may imagine that reputation may be difficult to measure, it is as easy as looking
+                                    into its foreign and local affiliations more than the number of conventions and
+                                    exhibitions or other events that are held in the venue year after year.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    Has a Wide Variety of Rooms?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    A convention center should be able to hold large-scale events. But it should also
+                                    have the capacity to cater to organizations that may want to hold meetings in
+                                    smaller scale or in more optimized locations. The availability of a variety of
+                                    function rooms allows these corporations to better plan out events such as company
+                                    meetings and company-wide celebrations. Others can also make use of the different
+                                    function rooms to hold birthday parties, as long as they’re able to properly
+                                    coordinate with the venue.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -350,6 +425,19 @@
                 25% Off!
             </div>
         </div>
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <img src="..." class="rounded me-2" alt="...">
+                <strong class="me-auto">Bootstrap</strong>
+                <small>11 mins ago</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                Hello, world! This is a toast message.
+            </div>
+        </div>
+
+
 
     </main>
     <footer class="bg-footer">
@@ -379,21 +467,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-    <!-- BOOTSTRAP 5.0.2 JS  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 
 </body>
